Use latest version of mock-all that fixes issues and add test configuration arguments to allow reflection.